deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myhello-world-app
  namespace: demo-app
spec:
  selector:
    matchLabels:
      app: hello-k8s
  template:
    metadata:
      labels:
        app: hello-k8s
    spec:
      containers:
      - name: myapp
        image: macintoshprime/hello-kubernetes:a562a317829d1425eef365633a7e41329fd4a934
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 8080
          name: http
