deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-k8s-svc
  namespace: demo-app
spec:
  selector:
    app: hello-k8s
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
